--- a/Notes/7 进程间通信—共享内存.md
+++ b/Notes/7 进程间通信—共享内存.md
@@ -2,7 +2,7 @@
 
 ### 1.存储映射IO
 
-存储映射I/O (Memory-mapped I/O)  **使一个磁盘文件与存储空间中的一个缓冲区相映射。于是当从缓冲区中取数据，就相当于读文件中的相应字节** 。于此类似，将数据存入缓冲区，则相应的字节就自动写入文件。这样，就可在不适用read和write函数的情况下，使用地址（指针）完成I/O操作。
+存储映射I/O (Memory-mapped I/O)  **使一个磁盘文件与存储空间中的一个缓冲区相映射。于是当从缓冲区中取数据，就相当于读文件中的相应字节** 。于此类似，将数据存入缓冲区，则相应的字节就自动写入文件。这样，就可在不使用read和write函数的情况下，使用地址（指针）完成I/O操作。
 
 **使用这种方法，首先应通知内核，将一个指定文件映射到存储区域中。这个映射工作可以通过mmap函数来实现。**
 
@@ -17,21 +17,23 @@
   + **失败：MAP_FAILED宏**
 
 + **参数：**  
-  + addr:    	**建立映射区的首地址** ，由Linux内核指定。使用时，直接传递NULL
-  + length：  **欲创建映射区的大小**
-  + prot：      **映射区权限** ：PROT_READ、PROT_WRITE、PROT_READ|PROT_WRITE
-  + flags：     **标志位参数** (常用于设定更新物理区域、设置共享、创建匿名映射区)
-    + MAP_SHARED:  会将映射区所做的操作反映到物理设备（磁盘）上。
-    + MAP_PRIVATE:  映射区所做的修改不会反映到物理设备。
-  + fd：          **用来建立映射区的文件描述符**(文件在执行这个操作之前需要open)
-  + offset：   **映射文件的偏移(4k的整数倍)**
+  + **addr:**    	**建立映射区的首地址** ，由Linux内核指定。使用时，直接传递NULL
+  + **length**：  **欲创建映射区的大小**
+  + **prot：**      **映射区权限** ：PROT_READ、PROT_WRITE、PROT_READ|PROT_WRITE
+  + **flags：**     **标志位参数** (常用于设定更新物理区域、设置共享、创建匿名映射区)
+    + **MAP_SHARED:**  会将映射区所做的操作反映到物理设备（磁盘）上。
+    + **MAP_PRIVATE:**  映射区所做的修改不会反映到物理设备。
+  + **fd：**          **用来建立映射区的文件描述符**(文件在执行这个操作之前需要open)
+  + **offset：**   **映射文件的偏移(4k的整数倍)**
     + 映射区是由MMU完成映射的，而MMU的单位就是4K
 
 ### 3.munmap函数
 
 + 同malloc函数申请内存空间类似的，mmap建立的映射区在使用结束后也应调用类似free的函数来释放。
 + `int munmap(void *addr, size_t length); `
-+ **返回值：**成功：0； 失败：-1
++ **返回值：**
+  + 成功：0； 
+  + 失败：-1
 
 ### 4.mmap进行文件映射例子
 
@@ -48,21 +50,18 @@ int main()
 {
 	int len, ret;
 	char *p = NULL;
-
 	//打开文件，并给予权限
 	int fd = open("mytest.txt",O_CREAT|O_RDWR, 0644);
 	if(fd < 0) {
 		perror("open error");
 		exit(1);
 	}
-
 	//使用ftruncate函数设置文件大小
 	len = ftruncate(fd, 4);
 	if(len == -1) {
 		perror("ftruncate error");
 		exit(-1);
 	}
-
 	//创建MMAP，指针p来接受首地址
 	p = mmap(NULL, 4, PROT_READ|PROT_WRITE, MAP_SHARED, fd, 0);
 	if(p == MAP_FAILED) {
